feat: add idraw

--- a/example/index.html
+++ b/example/index.html
@@ -1,13 +1,11 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./index.css" /> -->
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div id="app">
-      Hello World
-    </div>
+    <div id="app"></div>
   </body>
   <script src="../../dist/myshow.js"></script>
-  <script src="./index.js"></script>
+  <script src="./index.js" type="module"></script>
 </html>
