--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,7 @@
   <body>
     <div id="app"></div>
   </body>
+  <script src="../../dist/iDraw.js"></script>
   <script src="../../dist/myshow.js"></script>
   <script src="./index.js" type="module"></script>
 </html>
